@@ -99,6 +99,7 @@ User visible changes
   + Signal TYPE-ERROR in LOGICAL-PATHNAME-TRANSLATIONS on invalid
     logical host as per ANSI (bug#3520570).
   + Fix run-time error reporting in compiled FORMAT calls (bug#3498026).
+  + Fix symlink to directory handling (bug#3467762).
 
 
 2.49 (2010-07-07)
